add log ingestion flow
